@@ -25,6 +25,7 @@ CPD Command Line Changes:
 ????? ??, 2013 - 5.0.5:
 
 Fixed bug  991: AvoidSynchronizedAtMethodLevel for static methods
+Fixed bug 1111: False positive: Useless parentheses
 Fixed bug 1114: CPD - Tokenizer not initialized with requested properties
 Fixed bug 1118: ClassCastException in pmd.lang.ecmascript.ast.ASTElementGet
 
